Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.
Admin message
The migration is almost done, at least the rest should happen in the background. There are still a few technical difference between the old cluster and the new ones, and they are summarized in this issue. Please pay attention to the TL:DR at the end of the comment.
Equivalent query: runconfig_tag IS IN ["DRM-TIP"] AND (machine_name IS IN ["bat-adln-1"] OR machine_tag IS IN ["ADL-S"]) AND ((testsuite_name = "IGT" AND test_name IS IN ["igt@i915_pm_rpm@module-reload"])) AND ((testsuite_name = "IGT" AND status_name IS IN ["fail"])) AND stderr ~= 'Failed assertion: wait_for_suspended\(\)'
Equivalent query: runconfig_tag IS IN ["DRM-TIP"] AND (machine_name IS IN ["bat-adln-1"] OR machine_tag IS IN ["ADL-S"]) AND ((testsuite_name = "IGT" AND test_name IS IN ["igt@i915_pm_rpm@module-reload"])) AND ((testsuite_name = "IGT" AND status_name IS IN ["fail"])) AND stderr ~= 'Failed assertion: wait_for_suspended\(\)'
Equivalent query: runconfig_tag IS IN ["DRM-TIP"] AND (machine_name IS IN ["bat-adln-1"] OR machine_tag IS IN ["ADL-S", "DG1"]) AND ((testsuite_name = "IGT" AND test_name IS IN ["igt@i915_pm_rpm@module-reload", "igt@i915_pm_rpm@legacy-planes-dpms@plane-58", "igt@i915_pm_rpm@legacy-planes-dpms@plane-67", "igt@i915_pm_rpm@legacy-planes-dpms@plane-40", "igt@i915_pm_rpm@legacy-planes-dpms@plane-76", "igt@i915_pm_rpm@legacy-planes-dpms@plane-49"])) AND ((testsuite_name = "IGT" AND status_name IS IN ["fail"])) AND stderr ~= 'Failed assertion: wait_for_suspended\(\)'
Equivalent query: runconfig_tag IS IN ["DRM-TIP"] AND (machine_name IS IN ["bat-adln-1"] OR machine_tag IS IN ["ADL-S", "DG1", "MTL-P"]) AND ((testsuite_name = "IGT" AND test_name IS IN ["igt@i915_pm_rpm@module-reload", "igt@i915_pm_rpm@legacy-planes-dpms@plane-58", "igt@i915_pm_rpm@gem-mmap-type@wb-smem0", "igt@i915_pm_rpm@gem-mmap-type@wc-smem0", "igt@i915_pm_rpm@gem-mmap-type@uc-smem0", "igt@i915_pm_rpm@legacy-planes-dpms@plane-67", "igt@i915_pm_rpm@legacy-planes-dpms@plane-40", "igt@i915_pm_rpm@legacy-planes-dpms@plane-76", "igt@i915_pm_rpm@legacy-planes-dpms@plane-49"])) AND ((testsuite_name = "IGT" AND status_name IS IN ["fail"])) AND stderr ~= 'Failed assertion: wait_for_suspended\(\)'
Equivalent query: runconfig_tag IS IN ["DRM-TIP"] AND (machine_name IS IN ["bat-adln-1"] OR machine_tag IS IN ["ADL-S", "DG1", "MTL-P"]) AND ((testsuite_name = "IGT" AND test_name IS IN ["igt@i915_pm_rpm@module-reload", "igt@i915_pm_rpm@legacy-planes-dpms@plane-58", "igt@i915_pm_rpm@gem-mmap-type@wb-smem0", "igt@i915_pm_rpm@gem-mmap-type@wc-smem0", "igt@i915_pm_rpm@gem-mmap-type@uc-smem0", "igt@i915_pm_rpm@gem-mmap-type", "igt@i915_pm_rpm@legacy-planes-dpms@plane-58", "igt@i915_pm_rpm@legacy-planes-dpms@plane-67", "igt@i915_pm_rpm@legacy-planes-dpms@plane-40", "igt@i915_pm_rpm@legacy-planes-dpms@plane-76", "igt@i915_pm_rpm@legacy-planes-dpms@plane-49"])) AND ((testsuite_name = "IGT" AND status_name IS IN ["fail"])) AND stderr ~= 'Failed assertion: wait_for_suspended\(\)'
Equivalent query: runconfig_tag IS IN ["DRM-TIP"] AND (machine_name IS IN ["bat-adln-1"] OR machine_tag IS IN ["ADL-S", "DG1", "DG2", "MTL-P"]) AND ((testsuite_name = "IGT" AND test_name IS IN ["igt@i915_pm_rpm@module-reload", "igt@i915_pm_rpm@gem-mmap-type@wb-smem0", "igt@i915_pm_rpm@gem-mmap-type@wc-smem0", "igt@i915_pm_rpm@gem-mmap-type@uc-smem0", "igt@i915_pm_rpm@gem-mmap-type", "igt@i915_pm_rpm@legacy-planes-dpms@plane-58", "igt@i915_pm_rpm@legacy-planes-dpms@plane-67", "igt@i915_pm_rpm@modeset-stress-extra-wait", "igt@i915_pm_rpm@legacy-planes-dpms@plane-40", "igt@i915_pm_rpm@legacy-planes-dpms@plane-76", "igt@i915_pm_rpm@dpms-mode-unset-non-lpsp", "igt@i915_pm_rpm@legacy-planes-dpms@plane-49"])) AND ((testsuite_name = "IGT" AND status_name IS IN ["fail"])) AND stderr ~= 'Failed assertion: wait_for_suspended\(\)'
something is runtime resuming the device immediately right after it's runtime suspended. So the igt_wait(suspended, 10000, 100) happens never to see the suspended state. I couldn't reproduce this on my adlp; one possibility is DRM FB polling, though I can't see connector probing in the logs. I wonder if I could get ssh access to one of the failing machines.